--- a/Master-Branch/HomePage.htm
+++ b/Master-Branch/HomePage.htm
@@ -15,7 +15,7 @@
         <div class="row">
            
                 <nav class="navbar navbar-default navbar-static-top red-color">
-                <div class="col-8-md col-8-xs">
+                <div class="col-8-md col-8-xs ml5">
                     <ul class ="displayUL">
                         <li class="innerList listFontStyle"> Home</li>
                         <li class="innerList listFontStyle"> Lecture Series </li>
