Lecture Series Updated

--- a/Master-Branch/HomePage.htm
+++ b/Master-Branch/HomePage.htm
@@ -17,8 +17,8 @@
                 <nav class="navbar navbar-default navbar-static-top red-color">
                 <div class="col-8-md col-8-xs ml5">
                     <ul class ="displayUL">
-                        <li class="innerList listFontStyle"> Home</li>
-                        <li class="innerList listFontStyle"> Lecture Series </li>
+                        <a href=""> <li class="innerList listFontStyle"> Home</li></a>
+                        <a href ="lectureSeries.htm"><li class="innerList listFontStyle"> Lecture Series </li></a>
                     </ul>
                   
                     </div>
