Updated Seminar Page

--- a/Master-Branch/HomePage.htm
+++ b/Master-Branch/HomePage.htm
@@ -19,6 +19,15 @@
                     <ul class ="displayUL">
                         <a href=""> <li class="innerList listFontStyle"> Home</li></a>
                         <a href ="lectureSeries.htm"><li class="innerList listFontStyle"> Lecture Series </li></a>
+                        <div class="dropdown innerList">
+                        <span class=" listFontStyle dropdown-toggle" data-toggle="dropdown">Center Events
+                         <span class="caret"></span>
+                            </span>
+                            <ul class="dropdown-menu">
+                            <li class="listFontStyle"><a href="#">Launch Events</a></li>
+                           
+                            </ul>
+                        </div>
                     </ul>
                   
                     </div>
