--- a/Master-Branch/HomePage.htm
+++ b/Master-Branch/HomePage.htm
@@ -24,7 +24,7 @@
                          <span class="caret"></span>
                             </span>
                             <ul class="dropdown-menu">
-                            <li class="listFontStyle"><a href="#">Launch Events</a></li>
+                            <li class="listFontStyle"><a href="mainPictureEvents.htm">Launch Events</a></li>
                            
                             </ul>
                         </div>
