--- a/masterBranch/mainPictureEvents.htm
+++ b/masterBranch/mainPictureEvents.htm
@@ -35,7 +35,7 @@
          <div class="row margin-top-small ">
              <div class="col-md-2 "></div>
               <div class="col-md-8 col-xs-12">
-                  <h2 class="playFair leftMargin">Launch Event</h2>
+                  <h2 class="playFair leftMargin">Launch Event: October 5, 2016</h2>
              </div>
              <div class="col-md-2 "></div>
         </div>
