Update Professor Phebe Picture

--- a/masterBranch/HomePage.htm
+++ b/masterBranch/HomePage.htm
@@ -112,7 +112,7 @@
              <div class="col-md-2 col-sm-2  "></div>
              <div class="col-md-4 col-sm-4  col-xs-12">
               <a href="http://www-bcf.usc.edu/~vayanou/" target="_blank">   
-             <img width="75%" class="equal-margin" src="images/phebe.png" alt="Prof. Phebe Vayanos">
+             <img width="75%" class="equal-margin" src="images/phebe.jpg" alt="Prof. Phebe Vayanos">
                    <span class="equal-margin text-style"> Professor Phebe Vayanos </span><br>
                   <span class="equal-margin text-style"> Associate Director</span></a>
              </div>
