--- a/masterBranch/people.htm
+++ b/masterBranch/people.htm
@@ -103,9 +103,9 @@
          <div class="row margin-top-small">
              <div class="col-md-2 col-sm-2  "></div>
              <div class="col-md-4 col-sm-4  col-xs-12">
-              <a href="www-scf.usc.edu/~vivektiw/" target="_blank">   
-             <img width="75%" class="equal-margin" src="images/phebe.jpg" alt="Vivek Tiwari">
-                   <span class="equal-margin text-style"> Vivek Tiwari </span><br>
+              <a href="https://www-scf.usc.edu/~vivektiw/" target="_blank">   
+             <img width="50%"class="equal-margin" src="images/Vivek_Tiwari.png" alt="Vivek Tiwari">
+                   <div class="name-margin text-style"> Vivek Tiwari </div><br>
                  </a>
              </div>
               
