Updated People Page
Updated the name of the people as well as link to there portfolio, etc

--- a/masterBranch/mainPictureEvents.htm
+++ b/masterBranch/mainPictureEvents.htm
@@ -22,6 +22,7 @@
                          <a href ="lecture.htm"><li class="innerList listFontStyle"> Lectures </li></a>
                           <a href="news.htm"> <li class="innerList listFontStyle"> News</li></a>
                           <a href ="projects.htm"><li class="innerList listFontStyle"> Projects </li></a>
+                         <a href ="people.htm"><li class="innerList listFontStyle"> People </li></a>
                        
                     </ul>
                   
