Update Home Page to given change

--- a/masterBranch/projects.htm
+++ b/masterBranch/projects.htm
@@ -17,7 +17,7 @@
                  <nav class="navbar navbar-default navbar-static-top red-color">
                 <div class="col-8-md col-8-xs ml5">
                     <ul class ="displayUL">
-                        <a href=""> <li class="innerList listFontStyle"> Home</li></a>
+                        <a href="HomePage.htm"> <li class="innerList listFontStyle"> Home</li></a>
                         <a href ="lectureSeries.htm"><li class="innerList listFontStyle"> Schedule </li></a>
                          <a href ="lecture.htm"><li class="innerList listFontStyle"> Lectures </li></a>
                           <a href="news.htm"> <li class="innerList listFontStyle"> News</li></a>
