Update Project Page

--- a/masterBranch/HomePage.htm
+++ b/masterBranch/HomePage.htm
@@ -164,7 +164,7 @@
                   </a>
              </div>
              <div class="col-md-6 col-sm-6  col-xs-12">
-                 <div class="insideContent">Professor Ayanian is a WiSE Gabilan Assistant Professor of Computer Science at the University of Southern California, where she directs the Automatic Coordination of Teams Laboratory. Prior to joining USC, she was a postdoctoral associate in the Computer Science and Artificial Intelligence Laboratory at MIT. Her research focuses on creating end-to-end solutions for coordinating teams of robots. In 2013 she was named one of IEEE Intelligent Systems "AI's 10 to watch” and in 2016 she was selected for MIT Technology Review’s 35 Innovators Under 35 (TR35). </div>
+                 <div class="insideContent">Professor Ayanian is a WiSE Gabilan Assistant Professor of Computer Science at the University of Southern California, where she directs the Automatic Coordination of Teams Laboratory. Prior to joining USC, she was a postdoctoral associate in the Computer Science and Artificial Intelligence Laboratory at MIT. Her research focuses on creating end-to-end solutions for coordinating teams of robots. </div>
                  
              </div>
               
