Updated People Page
Added the newly created page and to change the layout

--- a/masterBranch/people.htm
+++ b/masterBranch/people.htm
@@ -126,7 +126,7 @@
              <div class="col-md-3 col-sm-3  col-xs-12">
               <a href="http://www-bcf.usc.edu/~ayanian/" target="_blank">   
              <img width="75%" class="equal-margin" src="images/Nora.jpg" alt="Prof. Nora Ayanian">
-                   <span class="equal-margin text-style"> Professor. Nora Ayanian </span><br>
+                   <span class="equal-margin text-style"> Professor Nora Ayanian </span><br>
                  </a>
              </div>
               <!--
